Updated wallet page mobile text to fix breaks in text

--- a/src/components/layout/InvestNav/styles.module.scss
+++ b/src/components/layout/InvestNav/styles.module.scss
@@ -56,7 +56,7 @@
 .nav_link {
     cursor: pointer;
     @extend .link;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    
 }
 
 .nav_link_active {
@@ -82,18 +82,16 @@
 .nav_link_desktop_only{
     cursor: pointer;
     @extend .link;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 769px){
-
-
     .nav_container {
         @include flexbox(flex-start, flex-start);
         flex-direction: row;
         width: 100%;
         padding-top: 0em;
         overflow-x: scroll;
+        height: 100%;
     }
 
     .nav_link_desktop_only{
@@ -108,6 +106,7 @@
         display: flex;
         min-height: 0;
         flex-direction: row;
+        flex-wrap: wrap;
         text-align: left;
         background-color: #294661;
         flex-wrap: nowrap;
@@ -137,12 +136,14 @@
         filter: brightness(0) invert(1);
     }
     
+    .nav_link_name{
+        display: none;
+    }
 }
 
 
 @media only screen and (max-width: 480px){
     .link {
-        
         font-size: xx-small;
     }
 }
